moria/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: moria
  namespace: industries
spec:
  selector:
    app: moria
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8081
